--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <script src = " https://raw.githack.com/jeromeetienne/AR.js /2.0.5/aframe/build/aframe-ar.js "> </script>
 
 <body style = 'margin: 0px; overflow: scroll;'> 
-  <a-scene embedded arjs>
-    <a-marker type = 'pattern' url = 'pattern-1.patt'>
+  <a-scene embedded arjs =' patternRatio: 0.8 '>
+    <a-marker type = 'pattern' url = 'qr / pattern-1.patt'>
       <a-sphere position ="0 0,5 0" radius="1.25" color="#EF2D5E"> </a-sphere>
     </a-marker>
     <a-entity camera> </a-entity>
