--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs>
     <a-marker type = 'pattern' url = 'qr / pattern-1.patt'>
-      <a-entity gltf-model="url(https://yourlink/model.glb)" scale="1 1 1"></a-entity>
+      <a-entity gltf-model="url(https://github.com/bondy74/bondy74.github.io.git/lolipop_animation.glb)" scale="1 1 1"></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
