--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://rawgit.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.min.js"></script>
+/<script src = "https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+/<script src = "https://rawgit.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.min.js"></script>
 
-<body style="margin: 0; overflow: hidden;">
-  <a-scene embedded arjs>
+<script src = " https://aframe.io/releases/0.9.2/aframe.min.js "> </script> 
+<script src = " https://raw.githack.com/jeromeetienne/AR.js /2.0.5/aframe/build/aframe-ar.js "> </script>
+
+<body style = "margin: 0px; overflow: hidden;">
+  <a-scene embedded arjs =' patternRatio: 0.8 '>
     <a-marker type = 'pattern' url = 'qr / pattern-1.patt'>
       <a-entity gltf-model="url(https://github.com/bondy74/bondy74.github.io.git/lolipop_animation.glb)" scale="1 1 1"></a-entity>
     </a-marker>
-    <a-entity camera></a-entity>
+    <a-entity camera> </a-entity>
   </a-scene>
 </body>
+
 </html>
