--- a/index/index2.html
+++ b/index/index2.html
@@ -1,5 +1,8 @@
-<!doctype HTML> 
+<!DOCTYPE html>
 <html>
+
+/<script src = "https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+/<script src = "https://rawgit.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.min.js"></script>
 
 <script src = " https://aframe.io/releases/0.9.2/aframe.min.js "> </script> 
 <script src = " https://raw.githack.com/jeromeetienne/AR.js /2.0.5/aframe/build/aframe-ar.js "> </script>
@@ -11,6 +14,6 @@
     </a-marker>
     <a-entity camera> </a-entity>
   </a-scene>
-</body>    
-    
+</body>
+
 </html>
